src/objects/im_TabCustomLinks__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ExternalSite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TabCustomLinks</label>
</CustomObject>